Fix group line spacing

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -244,10 +244,10 @@
     padding: 15px 0 15px 44px;
 
     h3 {
-      font-size: 15px;
-      line-height: 1.2;
+      font-size: 16px;
+      line-height: 1.1;
       letter-spacing: -0.25px;
-      margin: 0 0 3px;
+      margin: 0;
       display: inline-block;
       a {
         color: @grayDark;
@@ -256,7 +256,7 @@
 
     .event-message, .event-meta {
       color: lighten(#79858C, 10);
-      line-height: 1.1;
+      line-height: 1.2;
     }
 
     .event-message {
